# tradelab-lib-lopezdp-utils

./: .gitignore  .mcp.json  CLAUDE.md  LIBRARY_STANDARDS.md  README.md  TODO.md  WORKFLOW.md  config-gar.env  extraction-log.md  gcp-gar-setup.sh  pyproject.toml  qa-audit-log.md  release.sh
.claude/: settings.local.json
.claude/.skills/proceed-with-extraction/: SKILL.md
.claude/agents/: docs-updater.md  notebooklm-researcher.md
.claude/skills/building-claude-code-customizations/: SKILL.md
.claude/skills/create-headless-workflow/: SKILL.md
.claude/skills/notebooklm-research/: SKILL.md
.claude/skills/proceed-with-extraction/: SKILL.md
.claude/skills/proceed-with-qa-audit/: SKILL.md
.claude/skills/quality-assessment/: SKILL.md
.claude/skills/update-docs-on-completion/: SKILL.md
.github/workflows/: quality.yml  release.yml
docs/phase1_extraction/: TODO.md  extraction-log.md
docs/plans/: 2026-02-14-create-headless-workflow-design.md
docs/plans/create_headless_skill/: 2026-02-14-create-headless-workflow.md  2026-02-17-phase2-production-design.md  (+2 more)
docs/quality_assessment/: allocation.md  data.md  evaluation.md  features.md  labeling.md  modeling.md
scripts/: lopez-extraction.sh  qa-audit-cleanup.md  qa-audit.launchd.plist  qa-audit.sh
tests/: conftest.py  test_hpc.py
tests/allocation/: conftest.py  test_denoising.py  test_hrp.py  test_integration.py  test_nco.py  test_simulation.py
tests/data/: conftest.py  test_bars.py  test_etf.py  test_futures.py  test_microstructure.py  test_sampling.py
tests/evaluation/: conftest.py  test_bet_sizing.py  test_cpcv.py  test_integration.py  test_overfitting.py  test_redundancy.py  test_statistics.py  test_strategy_risk.py  test_synthetic.py
tests/features/: conftest.py  test_entropy.py  test_fractional_diff.py  test_importance.py  test_integration.py  test_orthogonal.py  test_structural_breaks.py
tests/labeling/: conftest.py  test_class_balance.py  test_integration.py  test_meta_labeling.py  test_sample_weights.py  test_triple_barrier.py
tests/modeling/: conftest.py  test_cross_validation.py  test_ensemble.py  test_hyperparameter_tuning.py  test_integration.py
(+120 files in other folders)
