[project]
name = "tradelab-lopezdp-utils"
version = "0.1.0"
description = "Utilities from 'Advances in Financial Machine Learning' by López de Prado"
readme = "README.md"
authors = [
    { name = "Ezequiel M Rivero", email = "ezequielmrivero@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "polars>=1.0.0",
    "pandas>=2.0.0",
    "numpy>=2.0.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
    "statsmodels>=0.14.0",
    "matplotlib>=3.8.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["uv_build>=0.8.15,<0.9.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "tradelab.lopezdp_utils"

# [[tool.uv.index]] USE FOR INSTALLS FROM GAR
# # From https://docs.astral.sh/uv/guides/integration/alternative-indexes/#authenticate-with-a-google-access-token
# # set these for install and local publish:
# # export ARTIFACT_REGISTRY_TOKEN=$(gcloud auth application-default print-access-token)
# # export UV_INDEX_TRADELAB_PYPI_USERNAME=oauth2accesstoken
# # export UV_INDEX_TRADELAB_PYPI_PASSWORD="$ARTIFACT_REGISTRY_TOKEN"
# name = "tradelab-pypi"
# url = "https://europe-southwest1-python.pkg.dev/tradelab023/tradelab-pypi/simple/"
# publish-url = "https://europe-southwest1-python.pkg.dev/tradelab023/tradelab-pypi/"
# explicit = true

[dependency-groups]
dev = [
    "pre-commit>=4.3.0", # uv run pre-commit install
    "pytest>=8.4.2",
    "ruff>=0.13.1",
]

[tool.ruff]
# Exclude Jupyter notebooks and common directories
exclude = [
    "*.ipynb",
    ".git",
    ".ruff_cache",
    "__pycache__",
    ".venv",
    "venv",
    "dist",
]
line-length = 100

[tool.ruff.lint]
# Select rules focused on undefined names, unused variables and imports
#ignore = ["F841"]  # Ignore unused variable warnings
select = [
    "F",    # pyflakes (catches undefined names, unused imports, unused variables)
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "I",    # isort
    "RUF",  # ruff-specific rules
]
# Allow autofix for all enabled rules when using --fix with ruff as the linter
fixable = ["ALL"]
